# Semeval-machine-generated-code-detection

./: .gitignore  .gitmodules  README.md  download_dataset.py  exploratory-data-analysis.ipynb  graph.ipynb  pyproject.toml
notebooks/: example-gnn.ipynb  exploratory-data-analysis.ipynb  graph.ipynb  graph_2.ipynb  tree-sitter-demo.ipynb
src/: cli.py  code_parser.py  train.py  utils.py
src/data_processing/: README.md  __init__.py  code_parser.py  data_loading.py
src/models/: __init__.py  graph_gated.py  graph_v1.py  graph_v1_emb.py  graph_v1_emb_large.py
src/scripts/: run_graph_v1.sh
