[project]
name = "swsn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "ipykernel>=7.1.0",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "torch>=2.9.0",
    "torch-geometric>=2.7.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.1",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-php>=0.24.1",
    "tree-sitter-python>=0.25.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
semeval = "src.cli:cli"
